crates/dag-macros/tests/ui/workflow_buffer_missing_edge.stderr
error: [DAG206] buffer! references missing edge `trigger` -> `sink`
  --> tests/ui/workflow_buffer_missing_edge.rs:40:5
   |
40 |     buffer!(trigger -> sink, max_items = 10);
   |     ^^^^^^
